Traffic sources analysis

--- a/Thevie/Translation.ipynb
+++ b/Thevie/Translation.ipynb
@@ -486,13 +486,7 @@
       " 93%|████████████████████████████████████████████████████████████████████▌     | 88899/95980 [00:07<00:01, 6317.06it/s]\n",
       " 93%|█████████████████████████████████████████████████████████████████████     | 89533/95980 [00:07<00:01, 6149.12it/s]\n",
       " 94%|█████████████████████████████████████████████████████████████████████▌    | 90193/95980 [00:07<00:00, 6225.11it/s]\n",
-      " 95%|██████████████████████████████████████████████████████████████████████    | 90818/95980 [00:07<00:00, 6183.10it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 95%|██████████████████████████████████████████████████████████████████████    | 90818/95980 [00:07<00:00, 6183.10it/s]\n",
       " 95%|██████████████████████████████████████████████████████████████████████▍   | 91438/95980 [00:07<00:00, 6067.14it/s]\n",
       " 96%|██████████████████████████████████████████████████████████████████████▉   | 92047/95980 [00:07<00:00, 5879.32it/s]\n",
       " 97%|███████████████████████████████████████████████████████████████████████▍  | 92638/95980 [00:08<00:00, 5886.25it/s]\n",
@@ -1113,9 +1107,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1127,7 +1121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
