--- a/Thevie/rfm_analysis.ipynb
+++ b/Thevie/rfm_analysis.ipynb
@@ -1578,9 +1578,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1592,7 +1592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
