--- a/Customer_Sentiment_Analysis.ipynb
+++ b/Customer_Sentiment_Analysis.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders = pd.read_csv('../Data/Processed/orders.csv', encoding='utf-8')"
+    "orders = pd.read_csv('Data/Processed/orders.csv', encoding='utf-8')"
    ]
   },
   {
